# quantik-models-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: e2e-data-pipeline.yml  train-smoke.yml
docs/: autoplay-training.md  frontend-play.md  labeling-strategy.md  model-report.md  pipeline.md  policy-value-training-paper.md  scaling-guide.md  tensor-structure.md
docs/superpowers/plans/: 2026-07-15-policy-value-trainer.md
docs/superpowers/specs/: 2026-07-15-policy-value-trainer-design.md
examples/: inspect_checkpoint.py  train_small_local.sh  train_smoke.sh
scripts/: run_smoke_pipeline.sh  verify_smoke_outputs.py
src/quantik_models/: __init__.py  model_spec.py
src/quantik_models/data/: __init__.py  dataset.py  labels.py  materialize.py
src/quantik_models/export/: __init__.py  checkpoint.py
src/quantik_models/model/: __init__.py  policy_value_net.py
src/quantik_models/train/: __init__.py  trainer.py
tests/: test_dataset.py  test_export_checkpoint.py  test_materialize.py  test_policy_value_net.py  test_trainer.py
